Fix style when label visible

--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -516,6 +516,7 @@
 	.reader-share__button .gridicon {
 		position: relative;
 		top: 3px;
+		margin-right: 0;
 	}
 
 	.like-button .gridicon {
